// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> renders app 1`] = `
<h2
  data-tab-content={true}
>
  Any content 1
</h2>
`;

exports[`<App /> selects second tab 1`] = `
<h2
  data-tab-content={true}
>
  Any content 2
</h2>
`;
